# grafos-haskell-word-transformer

./: LICENSE  README.md  br.completo  br.teste  br.teste.cache  grafos.cabal  stack.yaml
src/: Graph.hs  GraphLoader.hs  Main.hs
