name:                grafos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grafos#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable word-graph
  hs-source-dirs:      src
  other-modules:       Graph, GraphLoader
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  -- bibliotecas
                     , directory 
                     , containers
                     , vector
                     , text
                     , text-metrics
  ghc-options:       -O3 -Wall -rtsopts -funbox-strict-fields
